# stocks_watcher

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.yml  init-letsencrypt.sh
.github/workflows/: docker-deployment.yml
ansible/: actions_inventory.ini  inventory.ini  site.yml
ansible/host_vars/: production_ghactions_01.yml  production_web_01.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2f7553b4a103_renamed_month_month_norm_cols.py  50f99623dd55_updated_decimal_stock_price.py  9eef5ef4a972_drop_norm_20y_table.py  acd519ad7b8a_stock_data_init.py  bd73d5c3550d_add_normalized_price_time_horizons.py  d18f3ab4e8ac_add_normalized_price_row.py
backend/api/: main.py
backend/api/routes/: health.py  stocks.py
backend/core/: config.py  metrics.py
backend/data/: download_datasets.py  load_stock_data.py  performance.py  tasks.py  z_score.py
backend/db/: engine.py  session.py
backend/models/: __init__.py  stock_data.py
backend/schemas/: stock_data.py
backend/scripts/: build_local.sh  run_locally.sh
backend/services/: stocks.py
backend/tests/: conftest.py  test_stock_data.py  test_stock_db.py  test_stock_loader.py
backend/utils/: decorators.py
frontend/: Dockerfile  entrypoint.sh  index.html  local.conf  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/stock_watcher/: package-lock.json  package.json
monitoring/: prometheus.yml
nginx/: default.conf.template
(+11 files in other folders)
